--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/savingPictureEditText" />
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/logListView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
